--- a/bower.json
+++ b/bower.json
@@ -38,6 +38,6 @@
     "url": "https://github.com/edavidso-informatica/ui-form.git"
   },
   "authors": [
-    { "name": "Kem Apak", "email": "kem@softwarenotes.net", "homepage": "http://www.softwarenotes.net" }
+    { "name": "Eric Davidson", "email": "edavidso@informatica.com", "homepage": "http://www.informatica.com" }
   ]
 }
