--- a/bower.json
+++ b/bower.json
@@ -1,18 +1,8 @@
 {
   "name": "ui-form",
-  "version": "0.3.1",
   "description": "Angular and Bootstrap form and form elements with all the bells and whistles.",
-  "keywords": [
-    "form",
-    "forms",
-    "form directives",
-    "validation",
-    "angular",
-    "angular.js",
-    "bootsrap",
-    "bootstrap forms",
-    "bootstrap form controls",
-    "bootstrap controls"
+  "authors": [
+    "Eric Davidson <edavidso@informatica.com>"
   ],
   "license": "MIT",
   "main": [
