--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "ui-form",
+  "version": "0.1.0",
   "description": "Angular and Bootstrap form and form elements with all the bells and whistles.",
   "authors": [
     "Eric Davidson <edavidso@informatica.com>"
