--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ui-form",
-  "version": "0.3.1",
+  "version": "0.1.0",
   "description": "Angular and Bootstrap form and form elements with all the bells and whistles.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/kemapak/ui-form.git"
+    "url": "https://github.com/edavidso-informatica/ui-form.git"
   },
-  "homepage": "https://github.com/kemapak/ui-form",
+  "homepage": "https://github.com/edavidso-informatica/ui-form",
   "license": "MIT",
   "devDependencies": {
     "del": "^2.2.0",
